@@ -25,6 +25,7 @@ targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs += "-Xlint:deprecation"
 }
 
 application {
@@ -50,6 +51,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
+
     implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'
@@ -58,7 +60,9 @@ dependencies {
     implementation group: 'com.google.http-client', name: 'google-http-client', version: '1.44.1'
     implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
 
-    implementation 'com.sun.mail:jakarta.mail:2.0.1'
+    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
+    implementation 'org.eclipse.angus:angus-mail:2.0.2'
+
 
 }
 
@@ -76,11 +80,4 @@ jlink {
 
 jlinkZip {
     group = 'distribution'
-}
-
-tasks.withType(JavaExec){
-    jvmArgs += [
-            '--add-modules', 'javafx.controls,javafx.fxml',
-            '--add-reads', 'com.example.ticketchecker=ALL-UNNAMED'
-    ]
 }
